@@ -27,10 +27,6 @@ springBoot {
 }
 
 tasks {
-  test {
-    // suppress warning about byte-buddy-agent (included in mockito) being loaded dynamically
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
-  }
   compileAotJava {
     with(options) {
       compilerArgs.add("-Xlint:-deprecation,-unchecked,none")
